--- a/css/aboutme.css
+++ b/css/aboutme.css
@@ -10,6 +10,27 @@ main {
     background-size: cover;
 }
 
+h1 {
+  font-size: 50px;
+  padding-top: 30px;
+  margin-left: 150px;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+}
+
+h2 {
+  font-size: 16px;
+  margin-left: 150px;
+  text-align: center;
+  padding: 30px 300px 0px 300px;
+  font-family: 'Roboto', sans-serif;
+}
+
+hr {
+  margin: 0px 450px 0px 600px;
+  color: salmon;
+}
+
 * {
     margin: 0;
     padding: 0;
